[package]
name = "ets"
version = "0.1.1"
authors = ["manishsingh10895 <manishsingh10895@gmail.com>"]
edition = "2018"
description = "simple cli express-typescript-starter"
readme="README.md"
repository="https://github.com/manishsingh10895/ets-cli"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
failure = "0.1.8"
exitfailure = "0.5.1"
Inflector = "0.11.4"
