[package]
authors = ["manishsingh10895 <manishsingh10895@gmail.com>"]
description = "simple cli express-typescript-starter"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "ets"
readme = "README.md"
repository = "https://github.com/manishsingh10895/ets-cli"
version = "0.2.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
colored = "2.0.0"
exitfailure = "0.5.1"
failure = "0.1.8"
